--- a/01-person-app/src/App.css
+++ b/01-person-app/src/App.css
@@ -9,3 +9,27 @@
 .bold {
   font-weight: bold;
 }
+
+.App button {
+  background: green;
+  color: white;
+  font: inherit;
+  /* border: 1px solid skyblue; */
+  padding: 8px;
+  cursor: pointer;
+}
+
+.App button:hover {
+  background: lightgreen;
+  color: black;
+}
+
+/* Normal css rule to style any button (within .App)
+that has the Red class */
+.App button.Red {
+  background-color: red;
+}
+
+.App button.Red:hover {
+  background-color: salmon;
+}
